evaluation/test_suite/positive/ub50/1.c
#include <stdio.h>

int main()
{
    int x = 0;
    int y = 1;
    printf("%d\n", &x < &y);
}
